data/forge_javadoc/1.7.10/processed/net_minecraft_world_gen_structure_StructureVillagePieces.Church.md
# StructureVillagePieces.Church

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.Church

## Class signature

```java
public static class StructureVillagePieces.Church extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `static StructureVillagePieces.Church func_74919_a(StructureVillagePieces.Start p_74919_0_, java.util.List p_74919_1_, java.util.Random p_74919_2_, int p_74919_3_, int p_74919_4_, int p_74919_5_, int p_74919_6_, int p_74919_7_)`
- `protected int getVillagerType(int p_74888_1_)`

## Fields

- `Church`
- `Church`