data/forge_javadoc/1.8.9/processed/net_minecraft_world_gen_structure_StructureVillagePieces.Church.md
# StructureVillagePieces.Church

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.Church

## Class signature

```java
public static class StructureVillagePieces.Church extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World worldIn, java.util.Random randomIn, StructureBoundingBox structureBoundingBoxIn)` — second Part of Structure generating, this for example places Spiderwebs, Mob Spawners, it closes Mineshafts at the end, it adds Fences...
- `static StructureVillagePieces.Church func_175854_a(StructureVillagePieces.Start start, java.util.List<StructureComponent> p_175854_1_, java.util.Random rand, int p_175854_3_, int p_175854_4_, int p_175854_5_, EnumFacing facing, int p_175854_7_)`
- `protected int func_180779_c(int p_180779_1_, int p_180779_2_)`

## Fields

- `Church`
- `Church`